--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.18.0",
     "express-jwt": "^7.5.0",
     "express-validator": "^6.14.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1"
   }
 }
