--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Pepper1874/bookadminnode#readme",
   "dependencies": {
+    "adm-zip": "^0.5.9",
     "body-parser": "^1.20.0",
     "boom": "^7.3.0",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "xml2js": "^0.4.23"
   }
 }
