--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "xml2js": "^0.4.23"
